syntax = "proto3";

option csharp_namespace = "Ds.Full.Proto.Protos.Staffs";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

package UserPkg;

service UserSrv {

	rpc GetUser (CommonPkg.AuditableIntMsg) returns (UserMsg) {
      option (google.api.http) = { get: "/v1/UserSrv/{Id}" }; 
	}

	rpc FilterUser (UserFilterMsg) returns (UserListMsg) {
      option (google.api.http) = { post: "/v1/UserSrv/filter" }; 
	}

	rpc ListUser (UserFilterMsg) returns (UserListMsg) {
      option (google.api.http) = { post: "/v1/UserSrv/list" }; 
	}

	rpc CreateUser (UserMsg) returns (UserMsg) {
      option (google.api.http) = { post: "/v1/UserSrv/create" }; 
	}

	rpc UpdateUser (UserMsg) returns (UserMsg) {
      option (google.api.http) = { put: "/v1/UserSrv/{Auditable.Id}/update" }; 
	}

	rpc DeleteUser (CommonPkg.AuditableIntMsg) returns (UserMsg) {
      option (google.api.http) = { delete: "/v1/UserSrv/{Id}" }; 
	}
}

message UserFilterMsg {
	optional CommonPkg.PaginatedMsg                             PageOptions                                       = 1  ;
	optional string                                             UserName                                          = 2  ;
    optional int32                                              PersonId                                          = 3  ;
	optional string                                             PersonName                                        = 4  ;
	optional string                                             PersonEmail                                       = 5  ;
	optional string                                             PersonAddress                                     = 6  ;
}

message UserMsg {
	optional CommonPkg.HeaderMsg                                Headers                                           = 1  ;
	         CommonPkg.AuditableIntMsg                          Auditable                                         = 2  ;
	         int32                                              ProfileId                                         = 3  ;
	         int64                                              PersonId                                          = 4  ;
	         string                                             UserName                                          = 5  ;
	         bool                                               IsActive                                          = 6  ;
	optional string                                             ProfileCode                                       = 7  ;
	optional string                                             ProfileDescription                                = 8  ;
	optional string                                             PersonName                                        = 9  ;
	optional google.protobuf.Timestamp                          PersonBirthDate                                   = 10 ;
	optional int32                                              PersonType                                        = 11 ;
	repeated UserPersonAddressListMsg                           PersonAddressList                                 = 12 ;
	repeated UserPersonContactListMsg                           PersonContactList                                 = 13 ;
	optional CommonPkg.ReturnMsg                                Returns                                           = 14 ;
}

message UserListMsg {
	repeated UserMsg                                            List                                              = 1  ;
}

message UserPersonAddressListMsg {
    optional CommonPkg.IdentifiableLongMsg                      Identifiable                                      = 1  ;
	optional int32                                              AddressType                                       = 2  ;
	optional string                                             Address                                           = 3  ;
}

message UserPersonContactListMsg {
	optional CommonPkg.IdentifiableLongMsg                      Identifiable                                      = 1  ;
	optional int32                                              ContactType                                       = 2  ;
	optional string                                             Contact                                           = 3  ;
}